# TOF

./: CNN_3_Class.ipynb  CNN_3_Class_ver1.1.ipynb  CNN_3_Class_ver1.2.ipynb  README.md  main.cpp  training_2.ipynb
TOF/TOF/: crc_calc.cpp
TOF/TOF/Debug/: vc142.idb
TOF/TOF/Debug/TOF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TOF.lastbuildstate
TOF_CPP_Window/: Serial.h  crc_calc.h  main.cpp
TOF_Ver2/: Serial.h  TOF_Ver2.cpp
TOF_ver3/: Serial.cpp  TOF_Ver2.cpp
TOP_CPP_Window_1.2/: crc_calc.cpp  main.cpp
TOP_CPP_Window_1.3/: main.cpp
tof_linux/: CMakeLists.txt  crc_calc.cpp  crc_calc.h  serial_port.cpp  serial_port.h  serial_port_stream.cpp  serial_port_stream.h  test.cpp  time_stamp.cpp
